feat: Pure stateless auth + security headers + 403 refresh fix
- Backend: JWT in JSON body (no cookies), CSRF disabled, security headers (HSTS, X-Frame-Options, CSP, Referrer-Policy)
- Backend: RefreshTokenRequest/LogoutRequest DTOs, JwtFilter only Authorization Bearer
- Backend: AuditLog JpaRepository (append-only), @AuditLog for bundle/permission actions
- Frontend: tokenStorage (sessionStorage), api.js Bearer + 403 refresh + queue
- Frontend: authStore trySilentRefresh, logout/refresh body, 403->refresh before forbidden
- Root: CHECK_USER_ROLES.sql, FIX_USER_ROLE.sql